# kalibr_image_geometry

./: .gitignore  README.md
camera_loader/: CMakeLists.txt  package.xml
extended_camera_info_publisher/: CMakeLists.txt  package.xml
extended_camera_info_publisher/include/extended_camera_info_publisher/: camera_info_publisher.h
extended_camera_info_publisher/include/kalibr_extended_camera_info_publisher/: camera_info_publisher.h
extended_camera_info_publisher/src/: camera_info_publisher.cpp  camera_info_publisher_node.cpp
extended_camera_loader/: CMakeLists.txt  package.xml
extended_camera_loader/include/extended_camera_loader/: camera.h  camera_loader.h
extended_camera_loader/src/: camera.cpp  camera_loader.cpp
extended_camera_model/: CMakeLists.txt  package.xml
extended_camera_model/include/extended_camera_model/: camera_model.h  cameras.h
extended_camera_model/include/extended_camera_model/cameras/: License.md  camera_geometry.h  camera_geometry_base.h  global_shutter.h  image_mask.h  no_distortion.h  omni_projection.h  pinhole_projection.h  radial_tangential_distortion.h  static_asserts.h
extended_camera_model/include/kalibr_camera_model/: camera_model.h
extended_camera_model/src/: camera_model.cpp
extended_camera_model/src/cameras/: camera_geometry_base.cpp
extended_image_geometry_msgs/: CMakeLists.txt  package.xml
extended_image_geometry_msgs/msg/: ExtendedCameraInfo.msg
kalibr_camera_loader/: CMakeLists.txt  package.xml
kalibr_camera_loader/include/kalibr_camera_loader/: camera.h  camera_loader.h
kalibr_camera_loader/src/: camera.cpp  camera_loader.cpp
kalibr_camera_model/: CMakeLists.txt  package.xml
kalibr_camera_model/include/kalibr_camera_model/: camera_model.h
kalibr_camera_model/src/: camera_model.cpp
kalibr_extended_camera_info_publisher/: CMakeLists.txt  package.xml
kalibr_extended_camera_info_publisher/include/kalibr_extended_camera_info_publisher/: camera_info_publisher.h
kalibr_extended_camera_info_publisher/src/: camera_info_publisher.cpp  camera_info_publisher_node.cpp
kalibr_image_geometry_msgs/: CMakeLists.txt  package.xml
kalibr_image_geometry_msgs/msg/: ExtendedCameraInfo.msg
