<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kalibr_extended_camera_info_publisher</name>
  <version>0.0.0</version>
  <description>Publisher for extended camera info message</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>
  <author email="oehler@sim.tu-darmstadt.de">Martin Oehler</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>extended_image_geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
