<?xml version="1.0"?>
<package format="3">
  <name>extended_image_geometry_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for extended_image_geometry</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>
  <author email="oehler@sim.tu-darmstadt.de">Martin Oehler</author>

  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
